401-Create-NSG-Rules/azuredeploy.json
{
   "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
   "contentVersion": "1.0.0.0",

  "parameters": {

    "nsgLocation": {
      "type": "string",
      "defaultValue": "UK West",
      "allowedValues": [
        "UK West",
        "UK South"
      ],
      "metadata": {
        "description": "Restricts choices to wher premium storage is located in the US."
      }
    },
    "nsgAddsSubnet": {
      "type": "string",
      "defaultValue": "10.99.1.0",
      "metadata": {
        "description": "Active Directory subnet"
      }
    },
    "nsgCtxinfraSubnet": {
      "type": "string",
      "defaultValue": "10.99.2.0",
      "metadata": {
        "description": "Citrix Infrastructure subnet"
      }
    },
    "nsgCtxappSubnet": {
      "type": "string",
      "defaultValue": "10.99.3.0",
      "metadata": {
        "description": "Citrix XenApp subnet"
      }
    },

    "nsgGroupName": {
      "defaultValue": "NSG Group Name",
      "type": "string"
    }
  },
      
    "variables": {
      
       "vmSize": "Standard_A1"
            
    },
    
    "resources": [
      {
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[parameters('nsgGroupName')]",
        "apiVersion": "2015-06-15",
        "location": "[parameters('nsgLocation')]",
        "properties": {
          "securityRules": [
            {
              "name": "Allow-winrm-Tcp",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "5985-5986",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound"
              }
            },
            {
              "name": "Allow-rdp-Tcp",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 105,
                "direction": "Inbound"
              }
            },
            {
              "name": "Allow-ctxinfra-to-adds-dns-Tcp",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "53",
                "sourceAddressPrefix": "[parameters('nsgCtxinfraSubnet')]",
                "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
                "access": "Allow",
                "priority": 100,
                "direction": "Outbound"
              }
            },
            {
              "name": "Allow-ctxinfra-to-adds-dns-Udp",
              "properties": {
                "protocol": "Udp",
                "sourcePortRange": "*",
                "destinationPortRange": "53",
                "sourceAddressPrefix": "[parameters('nsgCtxinfraSubnet')]",
                "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
                "access": "Allow",
                "priority": 105,
                "direction": "Outbound"
              }
            },
            {
              "name": "Allow-ctxinfra-to-adds-krbtckt-Tcp",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "88",
                "sourceAddressPrefix": "[parameters('nsgCtxinfraSubnet')]",
                "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
                "access": "Allow",
                "priority": 110,
                "direction": "Outbound"
              }
            },
            {
              "name": "Allow-ctxinfra-to-adds-krbtckt-Udp",
              "properties": {
                "protocol": "Udp",
                "sourcePortRange": "*",
                "destinationPortRange": "88",
                "sourceAddressPrefix": "[parameters('nsgCtxinfraSubnet')]",
                "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
                "access": "Allow",
                "priority": 115,
                "direction": "Outbound"
              }
            },
            {
              "name": "Allow-ctxinfra-to-adds-ntptime-Udp",
              "properties": {
                "protocol": "Udp",
                "sourcePortRange": "*",
                "destinationPortRange": "123",
                "sourceAddressPrefix": "[parameters('nsgCtxinfraSubnet')]",
                "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
                "access": "Allow",
                "priority": 120,
                "direction": "Outbound"
              }
            },
            {
              "name": "Allow-ctxinfra-to-adds-rpcmapper-Tcp",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "135",
                "sourceAddressPrefix": "[parameters('nsgCtxinfraSubnet')]",
                "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
                "access": "Allow",
                "priority": 125,
                "direction": "Outbound"
              }
            },
            {
              "name": "Allow-ctxinfra-to-adds-krbpasswd-Tcp",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "464",
                "sourceAddressPrefix": "[parameters('nsgCtxinfraSubnet')]",
                "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
                "access": "Allow",
                "priority": 130,
                "direction": "Outbound"
              }
            },
            {
              "name": "Allow-ctxinfra-to-adds-krbpasswd-Udp",
              "properties": {
                "protocol": "Udp",
                "sourcePortRange": "*",
                "destinationPortRange": "464",
                "sourceAddressPrefix": "[parameters('nsgCtxinfraSubnet')]",
                "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
                "access": "Allow",
                "priority": 135,
                "direction": "Outbound"
              }
            },
            {
              "name": "Allow-ctxinfra-to-adds-ldap-Tcp",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "389",
                "sourceAddressPrefix": "[parameters('nsgCtxinfraSubnet')]",
                "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
                "access": "Allow",
                "priority": 140,
                "direction": "Outbound"
              }
            },
            {
              "name": "Allow-ctxinfra-to-adds-ldapssl-Tcp",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "636",
                "sourceAddressPrefix": "[parameters('nsgCtxinfraSubnet')]",
                "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
                "access": "Allow",
                "priority": 145,
                "direction": "Outbound"
              }
            },
            {
              "name": "Allow-ctxinfra-to-adds-gc-Tcp",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3268",
                "sourceAddressPrefix": "[parameters('nsgCtxinfraSubnet')]",
                "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
                "access": "Allow",
                "priority": 150,
                "direction": "Outbound"
              }
            },
            {
              "name": "Allow-ctxinfra-to-adds-gcssl-Tcp",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3269",
                "sourceAddressPrefix": "[parameters('nsgCtxinfraSubnet')]",
                "destinationAddressPrefix": "[parameters('nsgAddsSubnet')]",
                "access": "Allow",
                "priority": 155,
                "direction": "Outbound"
              }
            },
            {
              "name": "Allow-rdp2-Tcp",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 160,
                "direction": "Outbound"
              }
            },
            {
              "name": "Allow-ctxinfra-to-Internet-https-Tcp",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "[parameters('nsgCtxinfraSubnet')]",
                "destinationAddressPrefix": "INTERNET",
                "access": "Allow",
                "priority": 300,
                "direction": "Outbound"
              }
            },
            {
              "name": "Allow-ctxinfra-to-ctxapp-https-Tcp",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "[parameters('nsgCtxinfraSubnet')]",
                "destinationAddressPrefix": "[parameters('nsgCtxappSubnet')]",
                "access": "Allow",
                "priority": 305,
                "direction": "Outbound"
              }
            }


          ]
        },
        "dependsOn": []
      }  
      ]
 
}
